--- a/DAY-2-BOX_MODEL/style.css
+++ b/DAY-2-BOX_MODEL/style.css
@@ -20,3 +20,23 @@ div{
 
 
 }
+
+/* 
++---------------------------+
+|         Margin            |
+|                           |
+|   +-------------------+   |
+|   |       Border      |   |
+|   |                   |   |
+|   |   +-----------+   |   |
+|   |   |  Padding  |   |   |
+|   |   | +-------+ |   |   |
+|   |   | |Content ||   |   |
+|   |   | +-------+ |   |   |
+|   |   +-----------+   |   |
+|   |                   |   |
+|   +-------------------+   |
+|                           |
++---------------------------+
+
+*/
